[package]
name = "protocol-play"
version = "0.15.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "protocol: play - a game built with Bevy"

[dependencies]
bevy = "0.15"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", optional = true }

[features]
default = []
player = []
gathering = ["dep:rand"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
