[package]
name = "protocol-play"
version = "0.32.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "protocol: play - a game built with Bevy"

[dependencies]
bevy = "0.18"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[features]
default = []
player = []
gathering = []

[[bin]]
name = "protocol-play"
path = "src/main.rs"

[[bin]]
name = "generate-campaign"
path = "src/gen_campaign.rs"

[[bin]]
name = "solve-campaign"
path = "src/solve_campaign.rs"

[[bin]]
name = "generate-icons"
path = "src/gen_icons.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
